Updated social media share buttons

--- a/laststeps.html
+++ b/laststeps.html
@@ -8,6 +8,10 @@
 <title>Get Recommended Aproach to Fight Chronic Kidney Disease</title>
 <meta name="description" content="NephronAI - an AI project by NightLight AI that aims to uses AI to counter Chronic Kidney Disease.">
 <meta name="keywords" content="NephronAI, chronic kidney disease, nightlight ai, nephron, ayush, anand">
+<script src="https://kit.fontawesome.com/c8b3c06dc0.js" crossorigin="anonymous"></script>
+<link href="https://kit-free.fontawesome.com/releases/latest/css/free-v4-shims.min.css" media="all" rel="stylesheet" id="font-awesome-5-kit-css">
+<link href="https://kit-free.fontawesome.com/releases/latest/css/free-v4-font-face.min.css" media="all" rel="stylesheet" id="font-awesome-5-kit-css">
+<link href="https://kit-free.fontawesome.com/releases/latest/css/free.min.css" media="all" rel="stylesheet" id="font-awesome-5-kit-css">
 <link href="https://fonts.googleapis.com/css?family=Rubik:300,400,500" rel="stylesheet">
 <link rel="stylesheet" href="css/styles-merged.css">
 <link rel="stylesheet" href="css/style.min.css">
@@ -122,17 +126,31 @@
     </div>
     </div>
 </section>
-
+s
 
 <section class="probootstrap-section">
 <div class="container">
 <div class="row">
 <div class="col-md-8 col-md-offset-2 section-heading mb50 text-center probootstrap-animate">
 <h2>Share your words</h2>
-<p class="lead">If you'd like our services why not spread the word.<br/>
-<a href="https://twitter.com/theayushanand?ref_src=twsrc%5Etfw" class="twitter-follow-button" data-size="large" data-show-screen-name="false" data-show-count="false">Follow me</a><script async src="https://platform.twitter.com/widgets.js" charset="utf-8"></script>
-<a href="https://twitter.com/intent/tweet?text=Hi,%20I%20just%20used%20NephronAI%20an%20AI%20powered%20tool%20by%20@theayushanand%20to%20fight%20chronic%20kidney%20disease%20using%20deep%20learning.%20Use%20it%20at%20https://ayushanand18.github.io/nephron-ai/" class="https://twclass="twitter-follow-button" data-size="large" data-show-screen-name="false" data-show-count="false">Tweet this</a><script async src="https://platform.twitter.com/widgets.js" charset="utf-8"></script>
-</p>
+If you'd like our services why not spread the word.<br><br>
+<div class="lead" style="line-height:4px !important; text-align:left; display:inline-block;">
+<button class="btn" data-target="https://twitter.com/intent/tweet?text=Hi,%20I%20just%20used%20NephronAI%20an%20AI%20powered%20tool%20by%20@theayushanand%20to%20fight%20chronic%20kidney%20disease%20using%20deep%20learning.%20Use%20it%20at%20https://ayushanand18.github.io/nephron-ai/" style="	padding-left: 19px;background: deepskyblue;color: white;"><i class="fab fa-twitter" aria-hidden="true" style="color: white;"></i>   Twitter</button>
+<button class="btn" data-target="https://www.facebook.com/sharer/sharer.php?u=https%3A%2F%2Fayushanand18.github.io%2Fnephron-ai%2F&amp;src=sdkpreparse" class="fb-xfbml-parse-ignore" style="padding-left: 22px;background: darkblue;color: white;"><i class="fab fa-facebook" aria-hidden="true" style="color: white;"></i>     Facebook</button>
+<br><br>
+<button class="btn" data-target="https://api.whatsapp.com/send?text=Hi,%20I%20just%20used%20NephronAI%20an%20AI%20powered%20tool%20by%20@theayushanand%20to%20fight%20chronic%20kidney%20disease%20using%20deep%20learning.%20Not%20only%20can%20it%20detect%20chronic%20kidney%20disease%20with%20about%2099.9%%20accuracy*%20but%20also%20identify%20its%20cause%20-%20everything%20using%20Artificial%20Intelligence.%20Use%20it%20at%20https://ayushanand18.github.io/nephron-ai" style="color: white;background: green;padding-left: 22px;"><i class="fab fa-whatsapp" aria-hidden="true" style="color: white;"></i>       Whatsapp</button>
+<button class="btn" data-target="mailto:?subject=NephronAI-fighting chronic kidney disease using deep learning&amp;body=Hi,%20I%20just%20used%20NephronAI%20an%20AI%20powered%20tool%20by%20@theayushanand%20to%20fight%20chronic%20kidney%20disease%20using%20deep%20learning.%20Not%20only%20can%20it%20detect%20chronic%20kidney%20disease%20with%20about%2099.9%%20accuracy*%20but%20also%20identify%20its%20cause%20-%20everything%20using%20Artificial%20Intelligence.%20Use%20it%20at%20https://ayushanand18.github.io/nephron-ai" style="color: white;background: black;padding-left: 22px;"><i class="fas fa-envelope" aria-hidden="true"></i>   Email</button>
+<br><br>
+<button class="btn" data-target="https://instagram.com/" style="background: #d6249f;background: radial-gradient(circle at 10% 97%, #fdf497 0%, #fdf497 5%, #fd5949 30%,#d6249f 55%,#285AEB 90%);color: white;padding-left: 22px;"><i class="fab fa-instagram" aria-hidden="true" style="/* mix-blend-mode: multiply; */color: white;"></i>        Instagram</button>
+<button class="btn" data-target="https://www.reddit.com/submit?url=https://aysuhanand18.github.io/nephron-ai&amp;title=Hi,%20I%20just%20used%20NephronAI%20an%20AI%20powered%20tool%20by%20@theayushanand%20to%20fight%20chronic%20kidney%20disease%20using%20deep%20learning.%20Not%20only%20can%20it%20detect%20chronic%20kidney%20disease%20with%20about%2099.9%%20accuracy*%20but%20also%20identify%20its%20cause%20-%20everything%20using%20Artificial%20Intelligence.%20Use%20it%20at%20https://ayushanand18.github.io/nephron-ai" style="color: white;background: red;padding-left: 22px;"><i class="fab fa-reddit" aria-hidden="true" style="color: white;"></i>     Reddit</button>
+<br><br>
+<button class="btn" data-target="https://pinterest.com" style="color: white;background: red;padding-left: 22px;"><i class="fab fa-pinterest" aria-hidden="true" style="color: white;"></i>         Pinterest</button>
+<button class="btn" data-target="https://www.linkedin.com/shareArticle?token&amp;isFramed=false&amp;url=https://ayushanand18.github.io/nephron-ai/" style="color: white;padding-left: 22px;background: dodgerblue;"><i class="fab fa-linkedin" aria-hidden="true" style="color: white;"></i>        LinkedIn</button>
+<br><br>
+<button class="btn" data-target="https://telegram.me/share/url?url=https://ayushanand18.github.io/nephron-ai&amp;text=Hi,%20I%20just%20used%20NephronAI%20an%20AI%20powered%20tool%20by%20@theayushanand%20to%20fight%20chronic%20kidney%20disease%20using%20deep%20learning.%20Not%20only%20can%20it%20detect%20chronic%20kidney%20disease%20with%20about%2099.9%%20accuracy*%20but%20also%20identify%20its%20cause%20-%20everything%20using%20Artificial%20Intelligence.%20Use%20it%20at%20https://ayushanand18.github.io/nephron-ai" style="color: white;padding-left: 22px;background: mediumblue;"><i class="fab fa-telegram" aria-hidden="true" style="color: white;"></i>          Telegram</button>
+<br><br>
+</div>
+
 </div>
 </div>
 </div>
@@ -240,6 +258,12 @@
     else{
         $(".others").show();
     }
+</script>
+<script>
+    $("div.lead .btn").click(function(e){
+        e.preventDefault();
+        window.location.href=this.getAttribute("data-target");
+    })
 </script>
 </body>
 </html>
