--- a/about.html
+++ b/about.html
@@ -79,7 +79,7 @@ But if chronic kidney disease is detected early then we can easily save thousand
 </div>
 <div class="row mb50">
 <div class="col-md-12">
-<p>Therefore, we came up with the idea of creating an AI (Artificial Intelligence) powered system to diagnose the disease, predict its cause and also recommend a solution to reduce the consequences of the disease.</p>
+<p class="lead">Therefore, we came up with the idea of creating an AI (Artificial Intelligence) powered system to diagnose the disease, predict its cause and also recommend a solution to reduce the consequences of the disease.</p>
 </div>
 </div>
 
