--- a/classify.html
+++ b/classify.html
@@ -55,7 +55,7 @@
 <h2>Are you ready? Fill the form below to know whether you have Chronic Kidney Disease or not.</h2>
 </div>
 <p class="watch-intro probootstrap-animate"><button class="btn btn-primary openmodal open-modal">Try it NOW</button></p><br>
-<span class="info">This is a Machine Learning Classification. Therefore, results might be inaccurate. We don't certify 100% authenticity.</span>
+<span class="info">This is a Machine Learning Classification. Therefore, results might be inaccurate. We don't certify 100% authenticity. Read the <a href="terms" >terms here</a>.</span>
 </div>
 </div>
 </div>
