--- a/contribute.html
+++ b/contribute.html
@@ -106,7 +106,7 @@
 <div class="row text-center">
 <div class="col-lg-8 col-md-offset-2 mb30 section-heading probootstrap-animate">
 <h2>We're Public</h2>
-<p class="lead" style='color:white !important;'>Our algorithms and data are transparent and we strongly care for privacy too. Visit our GitHub repository for the code behind the project. Links to our <a href='/privacy'>Privacy Policy</a> and <a href="terms">terms of service</a> are attached in the footer.</p>
+<p class="lead" style='color:white !important;'><font style="background:black;">Our algorithms and data are transparent and we strongly care for privacy too. Visit our GitHub repository for the code behind the project. Links to our <a href='/privacy'>Privacy Policy</a> and <a href="terms">Terms of Service</a> are attached in the footer.</font></p>
 </div>
 </div>
 <div class="row">
