--- a/index.html
+++ b/index.html
@@ -96,7 +96,7 @@
 <p>If our AI Algorithm figure out that you are vulnerable and have been affected by Chronic Kidney Disease then we shall investigate the cause also.</p>
 <ul class="text-left with-icon colored">
 <li><i class="icon-radio-checked"></i> <span>Answer basic lifestyle questions</span></li>
-<li><i class="icon-radio-checked"></i> <span>Provide your disease your history </span></li>
+<li><i class="icon-radio-checked"></i> <span>Provide your disease history </span></li>
 <li><i class="icon-radio-checked"></i> <span>Another layer of AI will predict the cause</span></li><br/>
 </ul>
 </div>
@@ -109,7 +109,7 @@
 <ul class="text-left with-icon colored">
 <li><i class="icon-radio-checked"></i> <span>Based on the cause predicted</span></li>
 <li><i class="icon-radio-checked"></i> <span>You'll get some lifestyle tips</span></li>
-<li><i class="icon-radio-checked"></i> <span>Follow them and keep up fighting spirit</span></li>
+<li><i class="icon-radio-checked"></i> <span>Follow them and keep up the fighting spirit</span></li>
 </ul>
 </div>
 </div>
