--- a/laststeps.html
+++ b/laststeps.html
@@ -58,7 +58,7 @@
 <div class="probootstrap-subtitle probootstrap-animate">
 <h2>We have found that the possible cause for your Chronic Kidney Disease might be <span class="cause"></span>. Please find the recommended aproach for you to fight against the disease.</h2>
 </div>
-<span class="info">This is a Machine Learning powered Service. Therefore, results might be inaccurate. We don't certify 100% authenticity.</span>
+<span class="info">This is a Machine Learning powered Service. Therefore, results might be inaccurate. We don't certify 100% authenticity. Read the <a href="terms" >terms here</a>.</span>
 </div>
 </div>
 </div>
@@ -126,8 +126,7 @@
     </div>
     </div>
 </section>
-s
-
+<hr color=lightgrey height=2px>
 <section class="probootstrap-section">
 <div class="container">
 <div class="row">
@@ -175,7 +174,7 @@ If you'd like our services why not spread the word.<br><br>
 <div class="col-md-4">
 <div class="probootstrap-footer-widget">
 <h3>About NephronAI</h3>
-<p>Nephron AI is the child project of NightLight AI by Ayush Anand. This is a Machine Learning powered tool for diagnosis and analysis of causes for Chronic Kidney Disease with 100% a99.9%**ccuracy.</p>
+<p>Nephron AI is the child project of NightLight AI by Ayush Anand. This is a Machine Learning powered tool for diagnosis and analysis of causes for Chronic Kidney Disease with about 99.9%** accuracy.</p>
 <p><a href="about" class="link-with-icon">Learn More <i class=" icon-chevron-right"></i></a></p>
 </div>
 </div>
