--- a/cause.html
+++ b/cause.html
@@ -12,6 +12,7 @@
 <link rel="stylesheet" href="css/styles-merged.css">
 <link rel="stylesheet" href="css/style.min.css">
 <link rel="stylesheet" href="css/classify.min.css">
+<link rel="icon" type="image/png" href="assets/logo192.png">
 <noscript>
     Kindly enable JavaScript in your web browser. to utilize our services to their full potential it is recommended to have JavaScript enabled.
 </noscript>
