--- a/index.html
+++ b/index.html
@@ -18,6 +18,7 @@
 <link href="https://fonts.googleapis.com/css?family=Rubik:300,400,500" rel="stylesheet">
 <link rel="stylesheet" href="css/styles-merged.css">
 <link rel="stylesheet" href="css/style.min.css">
+<link rel="icon" type="image/png" href="assets/logo192.png">
 <!--[if lt IE 9]>
       <script src="js/vendor/html5shiv.min.js"></script>
       <script src="js/vendor/respond.min.js"></script>
