--- a/laststeps.html
+++ b/laststeps.html
@@ -15,6 +15,7 @@
 <link href="https://fonts.googleapis.com/css?family=Rubik:300,400,500" rel="stylesheet">
 <link rel="stylesheet" href="css/styles-merged.css">
 <link rel="stylesheet" href="css/style.min.css">
+<link rel="icon" type="image/png" href="assets/logo192.png">
 <link rel="stylesheet" href="css/classify.min.css">
 <noscript>
     Kindly enable JavaScript in your web browser. to utilize our services to their full potential it is recommended to have JavaScript enabled.
