--- a/classify.html
+++ b/classify.html
@@ -211,7 +211,7 @@
 <ul class="probootstrap-footer-widget">
 <li><a href="/">Home (NightLight AI)</a></li>
 <li><a href="/privacy">Privacy</a></li>
-<li><a href="/terms">Terms</a></li>
+<li><a href="terms">Terms</a></li>
 </ul>
 </div>
 </div>
