--- a/terms.html
+++ b/terms.html
@@ -1,1 +1,203 @@
-To be updated soon
+<!DOCTYPE html>
+<html lang="en">
+<head>
+<script src="https://www.googletagmanager.com/gtag/js?id=UA-129803213-2" defer></script>
+<script defer>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
+
+  gtag('config', 'UA-129803213-2');
+</script>
+
+<meta charset="utf-8">
+<meta name="viewport" content="width=device-width, initial-scale=1">
+<title>Terms of Service - NephronAI </title>
+<meta name="description" content="Terms of Service - NephronAI, an AI project by NightLight AI that aims to uses AI to counter Chronic Kidney Disease.">
+<meta name="keywords" content="terms, privacy, NephronAI, chronic kidney disease, nightlight ai">
+<link href="https://fonts.googleapis.com/css?family=Rubik:300,400,500" rel="stylesheet">
+<link rel="stylesheet" href="css/styles-merged.css">
+<link rel="stylesheet" href="css/style.min.css">
+<link rel="icon" type="image/png" href="assets/logo192.png">
+<!--[if lt IE 9]>
+      <script src="js/vendor/html5shiv.min.js"></script>
+      <script src="js/vendor/respond.min.js"></script>
+    <![endif]-->
+</head>
+<body>
+
+<header role="banner" class="probootstrap-header">
+<div class="container-fluid">
+<a href="index" class="probootstrap-logo">Nephron<span>AI</span></a>
+<a href="#" class="probootstrap-burger-menu visible-xs"><i>Menu</i></a>
+<div class="mobile-menu-overlay"></div>
+<nav role="navigation" class="probootstrap-nav hidden-xs">
+<ul class="probootstrap-main-nav">
+<li class="active"><a href="index">Home</a></li>
+<li><a href="contribute">Contribute</a></li>
+<li><a href="about">About</a></li>
+<li><a href="https://ayushanand18.github.io/">NightLight AI</a></li>
+</ul>
+<div class="extra-text visible-xs">
+<a href="#" class="probootstrap-burger-menu"><i>Menu</i></a>
+<h5>Social</h5>
+<ul class="social-buttons">
+<li><a href="https://twitter.com/theayushanand"><i class="icon-twitter"></i></a></li>
+<li><a href="#"><i class="icon-facebook"></i></a></li>
+<li><a href="#"><i class="icon-instagram2"></i></a></li>
+</ul>
+<p><small>&copy; Copyright 2020 NightLight AI. All Rights Reserved.</small></p>
+</div>
+</nav>
+</div>
+</header>
+
+
+<section class="probootstrap-intro" style="" data-stellar-background-ratio="0.5">
+<div class="container-fluid">
+<div class="row">
+<div class="col-md-7 probootstrap-intro-text">
+<h1 class="probootstrap-animate">Terms of Service NephronAI</h1>
+<div class="probootstrap-subtitle probootstrap-animate">
+<h2>Our terms of services are being updated very soon</h2>
+</div>
+<p class="watch-intro probootstrap-animate"><a href="classify" class="popup-vimeo">Try it now<i class="icon-play2"></i></a></p><br>
+</div>
+</div>
+</div>
+<a class="probootstrap-scroll-down js-next" href="#next-section">Scroll down <i class="icon-chevron-down"></i></a>
+</section>
+
+
+<section class="probootstrap-section">
+<div class="container">
+<div class="row">
+<div class="col-lg-12 col-md-12 mb70 section-heading probootstrap-animate">
+<h2>A dream project...</h2>
+<p class="lead">Hi! I am a 15 year-old high school student in India who is figuring how AI can help cure predict and diagnose Chronic Kidney Disease. </p>
+</div>
+</div>
+<div class="row mb70">
+<div class="col-md-4 probootstrap-animate">
+<div class="probootstrap-box">
+<div class="icon text-center"><i class="icon-tools2"></i></div>
+<h3>Predict Disease</h3>
+<p>Using AI Algorithm built on Microsoft's Azure Machine Learning Architecture, our AI systems can predict whether a patient is affected by Chrnoic Kidney Disease or not.</p>
+<ul class="text-left with-icon colored">
+<li><i class="icon-radio-checked"></i> <span>Input simple medical records</span></li>
+<li><i class="icon-radio-checked"></i> <span>Our AI Algorithm processes it</span></li>
+<li><i class="icon-radio-checked"></i> <span>You are notified if you are vulnerable</span></li>
+</ul>
+</div>
+</div>
+<div class="col-md-4 probootstrap-animate">
+<div class="probootstrap-box">
+<div class="icon text-center"><i class="icon-desktop"></i></div>
+<h3>Predict the Cause</h3>
+<p>If our AI Algorithm figure out that you are vulnerable and have been affected by Chronic Kidney Disease then we shall investigate the cause also.</p>
+<ul class="text-left with-icon colored">
+<li><i class="icon-radio-checked"></i> <span>Answer basic lifestyle questions</span></li>
+<li><i class="icon-radio-checked"></i> <span>Provide your disease history </span></li>
+<li><i class="icon-radio-checked"></i> <span>Another layer of AI will predict the cause</span></li><br/>
+</ul>
+</div>
+</div>
+<div class="col-md-4 probootstrap-animate">
+<div class="probootstrap-box">
+<div class="icon text-center"><i class="icon-lightbulb"></i></div>
+<h3>Recovery Strategy</h3>
+<p>Now, that we have told you about your diagnoseis as well as it's cause, then let's fight it. We'll recommend you certain lifestyle measures that you can take to at least lessen the ill effects of the disease.</p>
+<ul class="text-left with-icon colored">
+<li><i class="icon-radio-checked"></i> <span>Based on the cause predicted</span></li>
+<li><i class="icon-radio-checked"></i> <span>You'll get some lifestyle tips</span></li>
+<li><i class="icon-radio-checked"></i> <span>Follow them and keep up the fighting spirit</span></li>
+</ul>
+</div>
+</div>
+</div>
+<div class="row">
+<div class="col-md-4 col-md-offset-4 probootstrap-animate">
+<p class="text-center">
+<a href="classify" class="btn btn-primary btn-lg btn-block" role="button">Get My Prediction</a>
+</p>
+</div>
+</div>
+</div>
+</section>
+
+
+<section class="probootstrap-section probootstrap-section-colored">
+<div class="container">
+<div class="row">
+<div class="col-lg-12 col-md-12 mb70 section-heading probootstrap-animate">
+<h2>But wait...</h2>
+<p class="lead"><font style="background-color:black;" color='white'>Here's some additional information for you. We aren't a big team yet, it's just one contributor here- a 15 year old student who aims for the good of mankind - Ayush Anand. Why not <a href="contribute">Contribute or share your feedback</a> with us. We'll be more than glad.</font></p>
+</div>
+</div>
+</div>
+</section>
+
+
+<section class="probootstrap-section probootstrap-section-dark">
+<div class="container">
+<div class="row">
+<div class="col-md-8 col-md-offset-2 section-heading mb50 text-center probootstrap-animate">
+<h2>Know About the Creator</h2>
+<p class="lead">Ahh! I'm sorry if I forgot to tell you about my creator. He's Ayush Anand.<br/><a href="https://ayushanand18.github.io/about-me">Know more about him</a></p>
+</div>
+</div>
+</div>
+</section>
+
+
+<footer role="contentinfo" class="probootstrap-footer">
+<div class="container">
+<div class="row">
+
+<div class="col-md-4">
+<div class="probootstrap-footer-widget">
+<h3>About NephronAI</h3>
+<p>Nephron AI is the child project of NightLight AI by Ayush Anand. This is a Machine Learning powered tool for diagnosis and analysis of causes for Chronic Kidney Disease with about 99.9%** accuracy.</p>
+<p><a href="about" class="link-with-icon">Learn More <i class=" icon-chevron-right"></i></a></p>
+</div>
+</div>
+
+<div class="col-md-4">
+<div class="probootstrap-footer-widget">
+<h3>Important Links</h3>
+<ul class="probootstrap-footer-widget">
+<li><a href="/">Home (NightLight AI)</a></li>
+<li><a href="/privacy">Privacy</a></li>
+<li><a href="terms">Terms</a></li>
+</ul>
+</div>
+</div>
+
+<div class="col-md-4">
+<div class="probootstrap-footer-widget">
+<h3>Connect With Us</h3>
+<ul class="probootstrap-footer-social">
+<li><a href="https://twitter.com/theayushanand"><i class="icon-twitter"></i></a></li>
+<li><a href=""><i class="icon-facebook"></i></a></li>
+<li><a href=""><i class="icon-instagram2"></i></a></li>
+</ul>
+</div>
+</div>
+
+</div>
+</div>
+<div class="">
+<div class="text-center">
+<p>
+<small>&copy; 2020 <a href="https://ayushanand18.github.io/" target="_blank">NightLight AI</a>. All Rights Reserved. </small><br>
+<a href="#" class="js-backtotop">Back to top</a>
+</p>
+</div>
+</div>
+</footer>
+
+<script src="js/scripts.min.js" type="ef720126cb2c08d7b1817c75-text/javascript"></script>
+<script src="js/main.min.js" type="ef720126cb2c08d7b1817c75-text/javascript"></script>
+<script src="js/custom.js" type="ef720126cb2c08d7b1817c75-text/javascript"></script>
+<script src="https://ajax.cloudflare.com/cdn-cgi/scripts/7089c43e/cloudflare-static/rocket-loader.min.js" data-cf-settings="ef720126cb2c08d7b1817c75-|49" defer=""></script></body>
+</html>
