--- a/about.html
+++ b/about.html
@@ -140,7 +140,7 @@ But if chronic kidney disease is detected early then we can easily save thousand
 <ul class="probootstrap-footer-widget">
 <li><a href="/">Home (NightLight AI)</a></li>
 <li><a href="/privacy">Privacy</a></li>
-<li><a href="/terms">Terms</a></li>
+<li><a href="terms">Terms</a></li>
 </ul>
 </div>
 </div>
