--- a/laststeps.html
+++ b/laststeps.html
@@ -186,7 +186,7 @@ If you'd like our services why not spread the word.<br><br>
 <ul class="probootstrap-footer-widget">
 <li><a href="/">Home (NightLight AI)</a></li>
 <li><a href="/privacy">Privacy</a></li>
-<li><a href="/terms">Terms</a></li>
+<li><a href="terms">Terms</a></li>
 </ul>
 </div>
 </div>
